--- a/_posts/2019-08-15-Q-Q-plot.markdown.md
+++ b/_posts/2019-08-15-Q-Q-plot.markdown.md
@@ -37,7 +37,7 @@ sm.qqplot(X,line='s')
 The code above is used for plotting Q-Q plot for 1000 random numbers.
 
 
-![ ](/assets/images/Fig3.png  "Q-Q plot for 1000 random numbers")
+![ ](/assets/images/Fig3.png)
 
 Figure 1: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
 
@@ -61,7 +61,7 @@ sm.qqplot(X,line='s')
 
 {% endhighlight %}
 
-![ ](/assets/images/Fig1.png  "Q-Q plot for 100 random numbers")
+![ ](/assets/images/Fig1.png)
 
 Figure 2: Q-Q plot for 100 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
 
@@ -86,7 +86,7 @@ sm.qqplot(X,line='s')
 
 The code above is used for plotting Q-Q plot for 1000 random numbers log normally distributed
 
-![ ](/assets/images/Fig6.png  "Q-Q plot for 1000 random numbers")
+![ ](/assets/images/Fig6.png)
 
 Figure 3: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers that are log normally distributed and X-axis represent the quantiles of Theoretical Normal distribution.
 
@@ -114,7 +114,7 @@ sm.qqplot(data_bern,line='s')
 The code above generates a 1000 random numbers that follow binomial distribution
 
 
-![ ](/assets/images/Fig5.png  "Q-Q plot for 1000 random numbers")
+![ ](/assets/images/Fig5.png)
 
 Figure 4: Q-Q plot for 100 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
 
@@ -154,7 +154,7 @@ The above code represents the Q-Q plot for 2 samples.
 set1 contains 1000 random numbers. set2 contains 800 random numbers.
 Linear interpolation of the quantiles from set1 were used to plot Q-Q plot. 
 
-![ ](/assets/images/Fig4.png  "Q-Q plot for 1000 random numbers")
+![ ](/assets/images/Fig4.png)
 
 Figure 5: Q-Q plot for 100 random numbers. The Y-axis represent the quantiles of set2 and X-axis represent the quantiles of set1.
 
