--- a/_posts/2019-08-15-Q-Q-plot.markdown.md
+++ b/_posts/2019-08-15-Q-Q-plot.markdown.md
@@ -36,7 +36,7 @@ sm.qqplot(X,line='s')
 
 The code above is used for plotting Q-Q plot for 1000 random numbers.
 
-
+![]({{"/images/Fig3.png"|absolute_url}})
 ![ ](/assets/images/Fig3.PNG)
 
 Figure 1: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
@@ -61,6 +61,7 @@ sm.qqplot(X,line='s')
 
 {% endhighlight %}
 
+![]({{"/images/Fig1.png"|absolute_url}})
 ![ ](/assets/images/Fig1.PNG)
 
 Figure 2: Q-Q plot for 100 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
@@ -86,6 +87,7 @@ sm.qqplot(X,line='s')
 
 The code above is used for plotting Q-Q plot for 1000 random numbers log normally distributed
 
+![]({{"/images/Fig6.png"|absolute_url}})
 ![ ](/assets/images/Fig6.PNG)
 
 Figure 3: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers that are log normally distributed and X-axis represent the quantiles of Theoretical Normal distribution.
@@ -114,6 +116,7 @@ sm.qqplot(data_bern,line='s')
 The code above generates a 1000 random numbers that follow binomial distribution
 
 
+![]({{"/images/Fig5.png"|absolute_url}})
 ![ ](/assets/images/Fig5.PNG)
 
 Figure 4: Q-Q plot for 100 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
@@ -154,6 +157,7 @@ The above code represents the Q-Q plot for 2 samples.
 set1 contains 1000 random numbers. set2 contains 800 random numbers.
 Linear interpolation of the quantiles from set1 were used to plot Q-Q plot. 
 
+![]({{"/images/Fig4.png"|absolute_url}})
 ![ ](/assets/images/Fig4.PNG)
 
 Figure 5: Q-Q plot for 100 random numbers. The Y-axis represent the quantiles of set2 and X-axis represent the quantiles of set1.
