--- a/_posts/2019-08-15-Q-Q-plot.markdown.md
+++ b/_posts/2019-08-15-Q-Q-plot.markdown.md
@@ -36,8 +36,10 @@ sm.qqplot(X,line='s')
 
 The code above is used for plotting Q-Q plot for 1000 random numbers.
 
-![](Stats/blob/master/images/Fig3.png)
+![](Stats/blob/maste/images/Fig3.png)
 ![ ](/images/Fig3.PNG)
+
+[Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
 
 Figure 1: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
 
