--- a/_posts/2019-08-15-Q-Q-plot.markdown.md
+++ b/_posts/2019-08-15-Q-Q-plot.markdown.md
@@ -36,7 +36,7 @@ sm.qqplot(X,line='s')
 
 The code above is used for plotting Q-Q plot for 1000 random numbers.
 
-![](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
+<center><src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png"></center>
 ![ ](/images/Fig3.PNG)
 
 [Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
