--- a/_posts/2019-08-15-Q-Q-plot.markdown.md
+++ b/_posts/2019-08-15-Q-Q-plot.markdown.md
@@ -39,7 +39,7 @@ The code above is used for plotting Q-Q plot for 1000 random numbers.
 <center><src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png"></center>
 ![ ](/images/Fig3.PNG)
 
-[Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
+![Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
 
 Figure 1: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
 
