--- a/_posts/2019-08-15-Q-Q-plot.markdown.md
+++ b/_posts/2019-08-15-Q-Q-plot.markdown.md
@@ -36,10 +36,9 @@ sm.qqplot(X,line='s')
 
 The code above is used for plotting Q-Q plot for 1000 random numbers.
 
-<center><src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png"></center>
 ![ ](/images/Fig3.PNG)
 
-![Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
+[Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig3.png)
 
 Figure 1: Q-Q plot for 1000 random numbers. The Y-axis represent the quantiles of 1000 random numbers and X-axis represent the quantiles of Theoretical Normal distribution.
 
@@ -62,6 +61,8 @@ Use statsmodels api to generate Q-Q plot
 sm.qqplot(X,line='s')
 
 {% endhighlight %}
+
+[Figure2](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig1.png)
 
 ![](/images/Fig1.png)
 ![ ](/assets/images/Fig1.PNG)
@@ -88,6 +89,8 @@ sm.qqplot(X,line='s')
 {% endhighlight %}
 
 The code above is used for plotting Q-Q plot for 1000 random numbers log normally distributed
+
+[Figure3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig6.png)
 
 ![](/images/Fig6.png)
 ![ ](/images/Fig6.PNG)
@@ -117,6 +120,7 @@ sm.qqplot(data_bern,line='s')
 
 The code above generates a 1000 random numbers that follow binomial distribution
 
+[Figure4](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig5.png)
 
 ![](/images/Fig5.png)
 ![ ](/images/Fig5.PNG)
@@ -159,6 +163,7 @@ The above code represents the Q-Q plot for 2 samples.
 set1 contains 1000 random numbers. set2 contains 800 random numbers.
 Linear interpolation of the quantiles from set1 were used to plot Q-Q plot. 
 
+[Figure5](https://github.com/balakuntlaJayanth/Stats/blob/master/images/Fig4.png)
 ![](/images/Fig4.png)
 ![ ](/images/Fig4.PNG)
 
