--- a/_posts/2019-09-22-ks.markdown.md
+++ b/_posts/2019-09-22-ks.markdown.md
@@ -19,12 +19,11 @@ It is an alternative to Anova for non-parametric data. It can be used to compare
 
 ### Assumptions
 
-Sample size of different groups should be atleast 5 and need not be equal.
-Frequency distribution of different populations should be continous (Normal or uniform distributions).
+- Sample size of different groups should be atleast 5 and need not be equal.
+- Frequency distribution of different populations should be continous (Normal or uniform distributions).
 
 {% highlight python %}
 
-# Kruskal-Wallis H-test
 from numpy.random import seed
 from numpy.random import randn
 from scipy.stats import kruskal
@@ -111,9 +110,11 @@ else:
 
 
 
-Statistics=9.292, p=0.010
-Different distributions (reject H0)
+Statistics=9.292, p=0.010.
+Different distributions (reject H0).
+
+The p-value less than 0.05 reject , which indicates that there are differences between Groups A , B and C.
 
 
-References:
+### References:
 https://en.wikipedia.org/wiki/Kruskal%E2%80%93Wallis_one-way_analysis_of_variance
