--- a/_posts/2019-09-22-ks.markdown.md
+++ b/_posts/2019-09-22-ks.markdown.md
@@ -22,6 +22,8 @@ It is an alternative to Anova for non-parametric data. It can be used to compare
 - Sample size of different groups should be atleast 5 and need not be equal.
 - Frequency distribution of different populations should be continous (Normal or uniform distributions).
 
+### Implementation in Python
+
 {% highlight python %}
 
 from numpy.random import seed
