--- a/_posts/2019-09-28-PCA.markdown.md
+++ b/_posts/2019-09-28-PCA.markdown.md
@@ -295,7 +295,7 @@ def screeplot(obj="pcascree"):
 Scree plot is generally histogram or line plot represent Principal co-ordinates in the X-axis and Variance in Y-axis. If maximum variance 
 is captured in more than 3 Principal components , then PCA may not be best way to represent the calculate variance.
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_14_0.png">
+<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_14_0.png" width=400 height=400>
 
 {% highlight python %}
 
@@ -319,7 +319,7 @@ pcaplot(x=rotation[0], y=rotation[1], z=rotation[2], labels=S_columns, var1=roun
 
 ### Figure 2: PCA plot
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_16_0.png">
+<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_16_0.png" width=400 height=400>
 
 
 ### Figure 2: PCA Scatter plot
@@ -337,7 +337,7 @@ plt.scatter(x_new[:, 0], x_new[:, 1])
 
 
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png">
+<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png" width=400 height=400>
 
 
 ### Figure 3: PCA Heat map
@@ -358,7 +358,7 @@ ax.set_aspect("equal")
 
 
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_18_0.png">
+<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_18_0.png" width=400 height=400>
 
 
 ### PCA Biplot
@@ -410,7 +410,7 @@ biplot(x_new[:,0:2],np.transpose(pca_out.components_[0:2, :]),S_columns)
 
 ### Figure 4: PCA Biplot
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_20_1.png">
+<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_20_1.png" width=400 height=400>
 
 ##  References:
 
