--- a/_posts/2019-09-28-PCA.markdown.md
+++ b/_posts/2019-09-28-PCA.markdown.md
@@ -297,6 +297,8 @@ is captured in more than 3 Principal components , then PCA may not be best way t
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_14_0.png" width=400 height=400>
 
+![](images/output_14_0.png?raw=true)
+
 {% highlight python %}
 
 def pcaplot(x="x", y="y", z="z", labels="S_columns", var1="var1", var2="var2", var3="var3"):
@@ -321,6 +323,8 @@ pcaplot(x=rotation[0], y=rotation[1], z=rotation[2], labels=S_columns, var1=roun
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_16_0.png" width=400 height=400>
 
+![](images/output_16_0.png?raw=true)
+
 
 ### Figure 2: PCA Scatter plot
 
@@ -338,6 +342,8 @@ plt.scatter(x_new[:, 0], x_new[:, 1])
 
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png" width=400 height=400>
+
+![](images/output_17_1.png?raw=true)
 
 
 ### Figure 3: PCA Heat map
@@ -359,6 +365,8 @@ ax.set_aspect("equal")
 
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_18_0.png" width=400 height=400>
+
+![](images/output_18_0.png?raw=true)
 
 
 ### PCA Biplot
@@ -411,6 +419,8 @@ biplot(x_new[:,0:2],np.transpose(pca_out.components_[0:2, :]),S_columns)
 ### Figure 4: PCA Biplot
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_20_1.png" width=400 height=400>
+
+![](images/output_20_1.png?raw=true)
 
 ##  References:
 
