--- a/_posts/2019-09-28-PCA.markdown.md
+++ b/_posts/2019-09-28-PCA.markdown.md
@@ -321,7 +321,7 @@ pcaplot(x=rotation[0], y=rotation[1], z=rotation[2], labels=S_columns, var1=roun
 
 ### Figure 2: PCA plot
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_16_0.png" width=400 height=400>
+<img src="/images/output_16_0.png" alt="Screeplot" width=400 height=400>
 
 ![](images/output_16_0.png?raw=true)
 
