--- a/_posts/2019-09-28-PCA.markdown.md
+++ b/_posts/2019-09-28-PCA.markdown.md
@@ -321,9 +321,7 @@ pcaplot(x=rotation[0], y=rotation[1], z=rotation[2], labels=S_columns, var1=roun
 
 ### Figure 2: PCA plot
 
-<img src="/images/output_16_0.png" alt="Screeplot" width=400 height=400>
-
-![](images/output_16_0.png?raw=true)
+<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png" alt="PCA Plot" width="42" height="42" border="0">
 
 
 ### Figure 2: PCA Scatter plot
@@ -343,7 +341,7 @@ plt.scatter(x_new[:, 0], x_new[:, 1])
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png" width=400 height=400>
 
-![](images/output_17_1.png?raw=true)
+
 
 
 ### Figure 3: PCA Heat map
@@ -366,7 +364,7 @@ ax.set_aspect("equal")
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_18_0.png" width=400 height=400>
 
-![](images/output_18_0.png?raw=true)
+
 
 
 ### PCA Biplot
@@ -420,7 +418,7 @@ biplot(x_new[:,0:2],np.transpose(pca_out.components_[0:2, :]),S_columns)
 
 <img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_20_1.png" width=400 height=400>
 
-![](images/output_20_1.png?raw=true)
+
 
 ##  References:
 
