--- a/_posts/2019-09-28-PCA.markdown.md
+++ b/_posts/2019-09-28-PCA.markdown.md
@@ -295,9 +295,8 @@ def screeplot(obj="pcascree"):
 Scree plot is generally histogram or line plot represent Principal co-ordinates in the X-axis and Variance in Y-axis. If maximum variance 
 is captured in more than 3 Principal components , then PCA may not be best way to represent the calculate variance.
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_14_0.png" width=400 height=400>
+[Figure 1](https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_14_0.png)
 
-![](images/output_14_0.png?raw=true)
 
 {% highlight python %}
 
@@ -321,7 +320,7 @@ pcaplot(x=rotation[0], y=rotation[1], z=rotation[2], labels=S_columns, var1=roun
 
 ### Figure 2: PCA plot
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png" alt="PCA Plot" width="42" height="42" border="0">
+[Figure 2A](https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_16_0.png)
 
 
 ### Figure 2: PCA Scatter plot
@@ -338,10 +337,7 @@ plt.scatter(x_new[:, 0], x_new[:, 1])
     <matplotlib.collections.PathCollection
 
 
-
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png" width=400 height=400>
-
-
+[Figure 2B](https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_17_1.png)
 
 
 ### Figure 3: PCA Heat map
@@ -360,11 +356,7 @@ ax.set_aspect("equal")
 
 {% endhighlight %}
 
-
-
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_18_0.png" width=400 height=400>
-
-
+[Figure 3](https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_18_0.png)
 
 
 ### PCA Biplot
@@ -416,8 +408,7 @@ biplot(x_new[:,0:2],np.transpose(pca_out.components_[0:2, :]),S_columns)
 
 ### Figure 4: PCA Biplot
 
-<img src="https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_20_1.png" width=400 height=400>
-
+[Figure 4](https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_20_1.png)
 
 
 ##  References:
