--- a/_posts/2019-10-06-Regex.markdown.md
+++ b/_posts/2019-10-06-Regex.markdown.md
@@ -184,14 +184,12 @@ print(find_pattern("a", "[^abc]"))  # return true if neither of these is present
 
 
 ### Character sets
-| Pattern  | Matches                                                                                    |
-|----------|--------------------------------------------------------------------------------------------|
-| [abc]    | Matches either an a, b or c character                                                      |
-| [abcABC] | Matches either an a, A, b, B, c or C character                                             |
-| [a-z]    | Matches any characters between a and z, including a and z                                  |
-| [A-Z]    | Matches any characters between A and Z, including A and Z                                  |
-| [a-zA-Z] | Matches any characters between a and z, including a and z ignoring cases of the characters |
-| [0-9]    | Matches any character which is a number between 0 and 9                                    |
+-  [abc]    Matches either an a, b or c character 
+- [abcABC]  Matches either an a, A, b, B, c or C character
+- [a-z]    Matches any characters between a and z, including a and z 
+- [A-Z]    Matches any characters between A and Z, including A and Z 
+- [a-zA-Z] Matches any characters between a and z, including a and z ignoring cases of the characters
+- [0-9]    Matches any character which is a number between 0 and 9                                    |
 
 ### Meta sequences
 
