--- a/_posts/2019-10-06-Regex.markdown.md
+++ b/_posts/2019-10-06-Regex.markdown.md
@@ -7,11 +7,14 @@ categories: jekyll update
 
 ## Regular Expressions
 
-Regular expression is a set of characters, called as the pattern, which helps in finding substrings in a given string. The pattern is used to detect the substrings
+Regular expression is a set of characters, called as the pattern, which helps in finding substrings in a given string. The pattern is used to detect the substrings.
+Regular expressions are extensively used in Text mining . Examples for Regular Expression usage in Data analysis is presented below
 
-For example, suppose you have a dataset of customer reviews about your restaurant. Say, you want to extract the emojis from the reviews because they are a good predictor os the sentiment of the review.
+Example 1 : You have a dataset of customer reviews about your restaurant. Say, you want to extract the emojis from the reviews because they are a good predictor os the sentiment of the review.
 
-Take another example, the artificial assistants such as Siri, Google Now use information retrieval to give you better results. When you ask them for any query or ask them to search for something interesting on the screen, they look for common patterns such as emails, phone numbers, place names, date and time and so on. This is because then the assitant can automatically make a booking or ask you to call the resturant to make a booking.
+Example 2 : The artificial assistants such as Siri, Google now use information retrieval to give you better results. When you ask them for any query or ask them to search for something interesting on the screen, they look for common patterns such as emails, phone numbers, place names, date and time and so on.
+
+Example 3 : Automated mining of Scientific Literature for better Scientific inference in experiments.
 
 Regular expressions are very powerful tool in text processing. It will help you to clean and handle your text in a much better way.
 
@@ -184,12 +187,12 @@ print(find_pattern("a", "[^abc]"))  # return true if neither of these is present
 
 
 ### Character sets
--  [abc]    Matches either an a, b or c character 
-- [abcABC]  Matches either an a, A, b, B, c or C character
-- [a-z]    Matches any characters between a and z, including a and z 
-- [A-Z]    Matches any characters between A and Z, including A and Z 
-- [a-zA-Z] Matches any characters between a and z, including a and z ignoring cases of the characters
-- [0-9]    Matches any character which is a number between 0 and 9                                    |
+-  [abc]	Matches either an a, b or c character 
+- [abcABC]	Matches either an a, A, b, B, c or C character
+- [a-z]	Matches any characters between a and z, including a and z 
+- [A-Z]	Matches any characters between A and Z, including A and Z 
+- [a-zA-Z]	Matches any characters between a and z, including a and z ignoring cases of the characters
+- [0-9]	Matches any character which is a number between 0 and 9                                    |
 
 ### Meta sequences
 
