--- a/_posts/2019-11-10-pandas.markdown.md
+++ b/_posts/2019-11-10-pandas.markdown.md
@@ -5,7 +5,7 @@ date:   2019-11-10 22:02:38 +0530
 categories: jekyll update
 ---
 
-# World of Python Indexing and Selecting Data
+# World of Python (Indexing and Selecting Data)
 
 Indexing and selecting data is one of the essential component of data
 analysis. Today we will discuss about few interesting topics listed below
