--- a/_posts/2019-11-17-pandas.markdown.md
+++ b/_posts/2019-11-17-pandas.markdown.md
@@ -19,6 +19,14 @@ Using both the methods, we will do the following indexing operations on a datafr
 * Selecting single and multiple columns
 * Selecting multiple rows and columns
 
+### Data Description
+
+we are using data set called market_fact.csv from keggle . Data can be downloaded from the keggle site using the URL provided below
+
+https://www.kaggle.com/denizkavi1/global-market-sales-data#market_fact.csv.
+
+In the code snippet below we read the market_fact.csv to data frame
+
 
 ```python
 # loading libraries and reading the data
@@ -2341,3 +2349,8 @@ market_df.loc[[True, True, False, True, True, False, True]]
 
 
 To summarise, we discussed two **explicit ways of indexing dataframes** - ```df.iloc[]``` and ```df.loc[]```. Next, let's study how to slice and dice sections of dataframes. 
+
+### References
+- https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html
+- https://www.tutorialspoint.com/python_pandas/python_pandas_indexing_and_selecting_data.htm
+- https://jakevdp.github.io/PythonDataScienceHandbook/03.02-data-indexing-and-selection.html
