--- a/_posts/2019-12-08-ttest_IN_R.markdown.md
+++ b/_posts/2019-12-08-ttest_IN_R.markdown.md
@@ -21,7 +21,7 @@ To investigate the significance of the difference between the sample mean and th
 
 ### Assumptions
 
-	- Samples should follow Normal Distribution or population from which samples are drawn should follow Normal Distribution
+Samples should follow Normal Distribution or population from which samples are drawn should follow Normal Distribution
 
 
 ### Null Hypothesis
@@ -52,8 +52,8 @@ head(x)
 <table>
 <caption>A data.frame: 6 × 13</caption>
 <thead>
-	<tr><th scope=col></th><th scope=col>Name</th><th scope=col>A1</th><th scope=col>A2</th><th scope=col>A3</th><th scope=col>A4</th><th scope=col>A5</th><th scope=col>A6</th><th scope=col>A7</th><th scope=col>A8</th><th scope=col>A9</th><th scope=col>A10</th><th scope=col>A11</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=""col""></th><th scope="col">Name</th><th scope="col">A1</th><th scope="col">A2</th><th scope="col">A3</th><th scope="col">A4</th><th scope="col">A5</th><th scope="col">A6</th><th scope="col">A7</th><th scope="col">A8</th><th scope="col">A9</th><th scope="col">A10</th><th scope="col">A11</th></tr>
+	<tr><th scope="col">&lt;int&gt;</th><th scope="col">&lt;chr&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
 	<tr><td>1</td><td>X49 </td><td> 3.0151134</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.30151134</td></tr>
@@ -72,7 +72,7 @@ use qqnorm function in R to generate Q-Q plot. The Q-Q plot is an indicator whet
 
 ```R
 qqnorm(x$A4)
-qqline(x$A4,col="red")
+qqline(x$A4,"col"="red")
 ```
 
 
@@ -97,7 +97,7 @@ for(i in 1:nrow(x)) {
 }
 ```
 
-In the above code data frame is divded in to 2 Groups. x2 is the first Group from 3rd column to 6th column. y2 is the second Group from 7th column to 13th column. t.test function in R is used to calculate the difference in means between x2 Group and y2 Group. 
+In the above code data frame is divded in to 2 Groups. x2 is the first Group from 3rd "col"umn to 6th "col"umn. y2 is the second Group from 7th "col"umn to 13th "col"umn. t.test function in R is used to calculate the difference in means between x2 Group and y2 Group. 
 
 t.test function returns pvalue and t-statistic. 
 t-statistic is the ratio of the departure of the estimated value of a parameter from its hypothesized value to its standard error.
@@ -119,8 +119,8 @@ head(stats)
 <table>
 <caption>A data.frame: 6 × 16</caption>
 <thead>
-	<tr><th scope=col>Var.1</th><th scope=col>Name</th><th scope=col>A1</th><th scope=col>A2</th><th scope=col>A3</th><th scope=col>A4</th><th scope=col>A5</th><th scope=col>A6</th><th scope=col>A7</th><th scope=col>A8</th><th scope=col>A9</th><th scope=col>A10</th><th scope=col>A11</th><th scope=col>pval</th><th scope=col>pad</th><th scope=col>tstat</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope="col">Var.1</th><th scope="col">Name</th><th scope="col">A1</th><th scope="col">A2</th><th scope="col">A3</th><th scope="col">A4</th><th scope="col">A5</th><th scope="col">A6</th><th scope="col">A7</th><th scope="col">A8</th><th scope="col">A9</th><th scope="col">A10</th><th scope="col">A11</th><th scope="col">pval</th><th scope="col">pad</th><th scope="col">tstat</th></tr>
+	<tr><th scope="col">&lt;int&gt;</th><th scope="col">&lt;chr&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
 	<tr><td>1</td><td>X49 </td><td> 3.0151134</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.3015113</td><td>-0.30151134</td><td>0.3910022</td><td>0.5647810</td><td> 1.0000000</td></tr>
@@ -143,8 +143,8 @@ subset(stats, subset=!(pval > 0.05))
 <table>
 <caption>A data.frame: 13 × 16</caption>
 <thead>
-	<tr><th></th><th scope=col>Var.1</th><th scope=col>Name</th><th scope=col>A1</th><th scope=col>A2</th><th scope=col>A3</th><th scope=col>A4</th><th scope=col>A5</th><th scope=col>A6</th><th scope=col>A7</th><th scope=col>A8</th><th scope=col>A9</th><th scope=col>A10</th><th scope=col>A11</th><th scope=col>pval</th><th scope=col>pad</th><th scope=col>tstat</th></tr>
-	<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th></th><th scope="col">Var.1</th><th scope="col">Name</th><th scope="col">A1</th><th scope="col">A2</th><th scope="col">A3</th><th scope="col">A4</th><th scope="col">A5</th><th scope="col">A6</th><th scope="col">A7</th><th scope="col">A8</th><th scope="col">A9</th><th scope="col">A10</th><th scope="col">A11</th><th scope="col">pval</th><th scope="col">pad</th><th scope="col">tstat</th></tr>
+	<tr><th></th><th scope="col">&lt;int&gt;</th><th scope="col">&lt;chr&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
 	<tr><th scope=row>12</th><td> 14</td><td>X186</td><td>-0.6693011</td><td>-0.6693011</td><td>-0.6693011</td><td>-0.6693011</td><td> 0.14885695</td><td>-0.09169779</td><td> 0.37116226</td><td>-0.6693011</td><td> 2.7126600</td><td>-0.2229739</td><td> 0.4284979</td><td>0.043901396</td><td>0.5102410</td><td>-2.543026</td></tr>
