--- a/_posts/2019-12-08-ttest_IN_R.markdown.md
+++ b/_posts/2019-12-08-ttest_IN_R.markdown.md
@@ -52,7 +52,7 @@ head(x)
 <table>
 <caption>A data.frame: 6 × 13</caption>
 <thead>
-	<tr><th scope=""col""></th><th scope="col">Name</th><th scope="col">A1</th><th scope="col">A2</th><th scope="col">A3</th><th scope="col">A4</th><th scope="col">A5</th><th scope="col">A6</th><th scope="col">A7</th><th scope="col">A8</th><th scope="col">A9</th><th scope="col">A10</th><th scope="col">A11</th></tr>
+	<tr><th scope="col"></th><th scope="col">Name</th><th scope="col">A1</th><th scope="col">A2</th><th scope="col">A3</th><th scope="col">A4</th><th scope="col">A5</th><th scope="col">A6</th><th scope="col">A7</th><th scope="col">A8</th><th scope="col">A9</th><th scope="col">A10</th><th scope="col">A11</th></tr>
 	<tr><th scope="col">&lt;int&gt;</th><th scope="col">&lt;chr&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
@@ -76,7 +76,7 @@ qqline(x$A4,"col"="red")
 ```
 
 
-[Figure 1] (https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_6_0.png)
+Link for Q-Q plot [Figure 1] (https://github.com/balakuntlaJayanth/Stats/blob/master/images/output_6_0.png).
 
 
 In the plot above most of the points lie on the red line with few deviations. We can confidently say that the data follows a normal distribution.
@@ -87,7 +87,7 @@ t=0
 p1=0
 pval=0
 tstat=0
-for(i in 1:nrow(x)) {
+for(i in 1:n"row"(x)) {
 	x2 = x[i,3:6]
 	y2 = x[i,7:13]
 	t = t.test(x2, y2)
@@ -147,19 +147,19 @@ subset(stats, subset=!(pval > 0.05))
 	<tr><th></th><th scope="col">&lt;int&gt;</th><th scope="col">&lt;chr&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th><th scope="col">&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><th scope=row>12</th><td> 14</td><td>X186</td><td>-0.6693011</td><td>-0.6693011</td><td>-0.6693011</td><td>-0.6693011</td><td> 0.14885695</td><td>-0.09169779</td><td> 0.37116226</td><td>-0.6693011</td><td> 2.7126600</td><td>-0.2229739</td><td> 0.4284979</td><td>0.043901396</td><td>0.5102410</td><td>-2.543026</td></tr>
-	<tr><th scope=row>29</th><td> 35</td><td>X271</td><td>-0.6700072</td><td>-0.6700072</td><td>-0.6700072</td><td>-0.6700072</td><td> 0.04992135</td><td> 2.37953326</td><td>-0.67000724</td><td> 1.1727799</td><td>-0.6700072</td><td> 0.5082173</td><td>-0.0904083</td><td>0.043680771</td><td>0.5102410</td><td>-2.546763</td></tr>
-	<tr><th scope=row>30</th><td> 36</td><td>X273</td><td>-0.6719450</td><td>-0.6719450</td><td>-0.6719450</td><td>-0.6719450</td><td>-0.10422101</td><td>-0.67194501</td><td> 0.95252099</td><td> 2.2344390</td><td>-0.6719450</td><td>-0.2073806</td><td> 1.1563117</td><td>0.043079981</td><td>0.5102410</td><td>-2.557042</td></tr>
-	<tr><th scope=row>46</th><td> 52</td><td>X123</td><td> 0.1955986</td><td> 2.1563352</td><td> 0.4463334</td><td> 1.3441760</td><td>-0.77293355</td><td> 0.23542896</td><td>-0.77293355</td><td>-0.7729335</td><td>-0.7729335</td><td>-0.5132045</td><td>-0.7729335</td><td>0.030138763</td><td>0.5102410</td><td> 3.464191</td></tr>
-	<tr><th scope=row>90</th><td> 97</td><td>X7  </td><td>-0.4256745</td><td>-0.9353339</td><td>-0.4355819</td><td>-0.8948819</td><td> 0.99087812</td><td>-0.94799248</td><td>-0.32230670</td><td> 0.4219958</td><td> 1.8088859</td><td> 1.4294959</td><td>-0.6894843</td><td>0.041895883</td><td>0.5102410</td><td>-2.462587</td></tr>
-	<tr><th scope=row>98</th><td>105</td><td>X275</td><td>-0.8515912</td><td>-0.8430859</td><td>-0.9989912</td><td>-0.7942543</td><td> 2.10819980</td><td>-0.53398601</td><td>-0.09500707</td><td> 1.2905780</td><td> 0.7106198</td><td> 0.1175591</td><td>-0.1100409</td><td>0.007833551</td><td>0.3055085</td><td>-3.864929</td></tr>
-	<tr><th scope=row>120</th><td>127</td><td>X124</td><td> 0.3194542</td><td> 1.6817957</td><td> 0.9378206</td><td> 0.9283728</td><td>-0.67983858</td><td> 0.22292039</td><td> 0.71051638</td><td>-1.0739499</td><td>-0.9208991</td><td>-0.9055368</td><td>-1.2206557</td><td>0.004774362</td><td>0.3055085</td><td> 3.875425</td></tr>
-	<tr><th scope=row>133</th><td>140</td><td>X165</td><td> 0.2053094</td><td> 1.4625085</td><td> 1.5603441</td><td> 1.3229935</td><td>-0.86399204</td><td>-0.24328420</td><td>-0.08488758</td><td>-0.8479875</td><td>-0.8407899</td><td>-0.8460182</td><td>-0.8241960</td><td>0.006205478</td><td>0.3055085</td><td> 5.271144</td></tr>
-	<tr><th scope=row>138</th><td>145</td><td>X160</td><td> 1.8191827</td><td> 0.4708295</td><td> 1.7974060</td><td>-0.1382339</td><td>-0.83865180</td><td> 0.23835624</td><td>-0.26748836</td><td>-0.8031789</td><td>-0.7172601</td><td>-0.7113505</td><td>-0.8496108</td><td>0.044816019</td><td>0.5102410</td><td> 3.020945</td></tr>
-	<tr><th scope=row>142</th><td>149</td><td>X121</td><td>-0.2812185</td><td>-0.9152801</td><td>-0.8866786</td><td>-0.9913631</td><td> 1.18185779</td><td>-0.76768559</td><td>-0.35269876</td><td>-0.2568829</td><td> 0.6385433</td><td> 0.5195321</td><td> 2.1118743</td><td>0.018942149</td><td>0.5102410</td><td>-2.939178</td></tr>
-	<tr><th scope=row>153</th><td>160</td><td>X170</td><td> 0.5719302</td><td> 0.3709573</td><td> 1.1678905</td><td> 0.6523675</td><td>-0.79378456</td><td> 1.99351754</td><td>-0.79419360</td><td>-0.7713272</td><td>-0.7963749</td><td>-0.7953060</td><td>-0.8056769</td><td>0.036948546</td><td>0.5102410</td><td> 2.508601</td></tr>
-	<tr><th scope=row>155</th><td>162</td><td>X39 </td><td> 0.2937863</td><td>-1.2512543</td><td>-1.1979204</td><td>-1.2441692</td><td> 0.20257218</td><td>-0.67692400</td><td>-0.17815514</td><td> 1.3910457</td><td> 1.1239213</td><td> 1.2452769</td><td> 0.2918207</td><td>0.029987639</td><td>0.5102410</td><td>-2.761462</td></tr>
-	<tr><th scope=row>156</th><td>163</td><td>X55 </td><td> 0.1843314</td><td> 1.0194104</td><td> 1.1476091</td><td> 1.3258378</td><td>-0.28342894</td><td> 0.82655230</td><td>-1.23229401</td><td> 0.2415810</td><td>-1.0166000</td><td>-0.9852899</td><td>-1.2277090</td><td>0.005601582</td><td>0.3055085</td><td> 3.642307</td></tr>
+	<tr><th scope="row">12</th><td> 14</td><td>X186</td><td>-0.6693011</td><td>-0.6693011</td><td>-0.6693011</td><td>-0.6693011</td><td> 0.14885695</td><td>-0.09169779</td><td> 0.37116226</td><td>-0.6693011</td><td> 2.7126600</td><td>-0.2229739</td><td> 0.4284979</td><td>0.043901396</td><td>0.5102410</td><td>-2.543026</td></tr>
+	<tr><th scope="row">29</th><td> 35</td><td>X271</td><td>-0.6700072</td><td>-0.6700072</td><td>-0.6700072</td><td>-0.6700072</td><td> 0.04992135</td><td> 2.37953326</td><td>-0.67000724</td><td> 1.1727799</td><td>-0.6700072</td><td> 0.5082173</td><td>-0.0904083</td><td>0.043680771</td><td>0.5102410</td><td>-2.546763</td></tr>
+	<tr><th scope="row">30</th><td> 36</td><td>X273</td><td>-0.6719450</td><td>-0.6719450</td><td>-0.6719450</td><td>-0.6719450</td><td>-0.10422101</td><td>-0.67194501</td><td> 0.95252099</td><td> 2.2344390</td><td>-0.6719450</td><td>-0.2073806</td><td> 1.1563117</td><td>0.043079981</td><td>0.5102410</td><td>-2.557042</td></tr>
+	<tr><th scope="row">46</th><td> 52</td><td>X123</td><td> 0.1955986</td><td> 2.1563352</td><td> 0.4463334</td><td> 1.3441760</td><td>-0.77293355</td><td> 0.23542896</td><td>-0.77293355</td><td>-0.7729335</td><td>-0.7729335</td><td>-0.5132045</td><td>-0.7729335</td><td>0.030138763</td><td>0.5102410</td><td> 3.464191</td></tr>
+	<tr><th scope="row">90</th><td> 97</td><td>X7  </td><td>-0.4256745</td><td>-0.9353339</td><td>-0.4355819</td><td>-0.8948819</td><td> 0.99087812</td><td>-0.94799248</td><td>-0.32230670</td><td> 0.4219958</td><td> 1.8088859</td><td> 1.4294959</td><td>-0.6894843</td><td>0.041895883</td><td>0.5102410</td><td>-2.462587</td></tr>
+	<tr><th scope="row">98</th><td>105</td><td>X275</td><td>-0.8515912</td><td>-0.8430859</td><td>-0.9989912</td><td>-0.7942543</td><td> 2.10819980</td><td>-0.53398601</td><td>-0.09500707</td><td> 1.2905780</td><td> 0.7106198</td><td> 0.1175591</td><td>-0.1100409</td><td>0.007833551</td><td>0.3055085</td><td>-3.864929</td></tr>
+	<tr><th scope="row">120</th><td>127</td><td>X124</td><td> 0.3194542</td><td> 1.6817957</td><td> 0.9378206</td><td> 0.9283728</td><td>-0.67983858</td><td> 0.22292039</td><td> 0.71051638</td><td>-1.0739499</td><td>-0.9208991</td><td>-0.9055368</td><td>-1.2206557</td><td>0.004774362</td><td>0.3055085</td><td> 3.875425</td></tr>
+	<tr><th scope="row">133</th><td>140</td><td>X165</td><td> 0.2053094</td><td> 1.4625085</td><td> 1.5603441</td><td> 1.3229935</td><td>-0.86399204</td><td>-0.24328420</td><td>-0.08488758</td><td>-0.8479875</td><td>-0.8407899</td><td>-0.8460182</td><td>-0.8241960</td><td>0.006205478</td><td>0.3055085</td><td> 5.271144</td></tr>
+	<tr><th scope="row">138</th><td>145</td><td>X160</td><td> 1.8191827</td><td> 0.4708295</td><td> 1.7974060</td><td>-0.1382339</td><td>-0.83865180</td><td> 0.23835624</td><td>-0.26748836</td><td>-0.8031789</td><td>-0.7172601</td><td>-0.7113505</td><td>-0.8496108</td><td>0.044816019</td><td>0.5102410</td><td> 3.020945</td></tr>
+	<tr><th scope="row">142</th><td>149</td><td>X121</td><td>-0.2812185</td><td>-0.9152801</td><td>-0.8866786</td><td>-0.9913631</td><td> 1.18185779</td><td>-0.76768559</td><td>-0.35269876</td><td>-0.2568829</td><td> 0.6385433</td><td> 0.5195321</td><td> 2.1118743</td><td>0.018942149</td><td>0.5102410</td><td>-2.939178</td></tr>
+	<tr><th scope="row">153</th><td>160</td><td>X170</td><td> 0.5719302</td><td> 0.3709573</td><td> 1.1678905</td><td> 0.6523675</td><td>-0.79378456</td><td> 1.99351754</td><td>-0.79419360</td><td>-0.7713272</td><td>-0.7963749</td><td>-0.7953060</td><td>-0.8056769</td><td>0.036948546</td><td>0.5102410</td><td> 2.508601</td></tr>
+	<tr><th scope="row">155</th><td>162</td><td>X39 </td><td> 0.2937863</td><td>-1.2512543</td><td>-1.1979204</td><td>-1.2441692</td><td> 0.20257218</td><td>-0.67692400</td><td>-0.17815514</td><td> 1.3910457</td><td> 1.1239213</td><td> 1.2452769</td><td> 0.2918207</td><td>0.029987639</td><td>0.5102410</td><td>-2.761462</td></tr>
+	<tr><th scope="row">156</th><td>163</td><td>X55 </td><td> 0.1843314</td><td> 1.0194104</td><td> 1.1476091</td><td> 1.3258378</td><td>-0.28342894</td><td> 0.82655230</td><td>-1.23229401</td><td> 0.2415810</td><td>-1.0166000</td><td>-0.9852899</td><td>-1.2277090</td><td>0.005601582</td><td>0.3055085</td><td> 3.642307</td></tr>
 </tbody>
 </table>
 
