--- a/_posts/2019-12-08-ttest_IN_R.markdown.md
+++ b/_posts/2019-12-08-ttest_IN_R.markdown.md
@@ -138,7 +138,7 @@ head(stats)
 ```R
 subset(stats, subset=!(pval > 0.05))
 ```
-
+Subsetting stats data frame for pvalue less than 0.05. Pvalue less than 0.05 indicates significance.
 
 <table>
 <caption>A data.frame: 13 × 16</caption>
