--- a/_posts/2019-12-08-ttest_IN_R.markdown.md
+++ b/_posts/2019-12-08-ttest_IN_R.markdown.md
@@ -36,6 +36,9 @@ R implementation of the ttest
 
 Read the data set provided in the link above using read.csv function in to R data frame
 
+### Data Source
+
+The data used for this blog is simulated data. The data is provided in the link below (https://github.com/balakuntlaJayanth/Stats/blob/master/N.csv).
 
 ```R
 x = read.csv("N.csv", header=TRUE,stringsAsFactors=F,check.names=FALSE, sep=",")
