--- a/_posts/2019-12-08-ttest_IN_R.markdown.md
+++ b/_posts/2019-12-08-ttest_IN_R.markdown.md
@@ -21,24 +21,26 @@ To investigate the significance of the difference between the sample mean and th
 
 ### Assumptions
 
-Samples should follow Normal Distribution or population from which samples are drawn should follow Normal Distribution
+Samples should follow Normal Distribution or population from which samples are drawn should follow Normal Distribution.
 
 
 ### Null Hypothesis
 
-  -  There is no significant difference between the sample mean
+  -  There is no significant difference between the sample mean.
   
 ### Alternate Hypothesis
 
-  - There is significant difference between the sample mean
+  - There is significant difference between the sample mean.
+  
+### Data Source
 
-R implementation of the ttest
+The data used for this blog is simulated data. The data is provided in the link below (https://github.com/balakuntlaJayanth/Stats/blob/master/N.csv). 
+
+### R implementation of the ttest
 
 Read the data set provided in the link above using read.csv function in to R data frame
 
-### Data Source
 
-The data used for this blog is simulated data. The data is provided in the link below (https://github.com/balakuntlaJayanth/Stats/blob/master/N.csv).
 
 ```R
 x = read.csv("N.csv", header=TRUE,stringsAsFactors=F,check.names=FALSE, sep=",")
