--- a/_posts/2020-01-05-F-test.markdown.md
+++ b/_posts/2020-01-05-F-test.markdown.md
@@ -15,7 +15,7 @@ To investigate the significance of the difference between two variances consider
 
 The samples of size n1 from Group 1 with values X1,X2,....Xn1 and size n2 from Group 2 with values Y1,Y2,...Yn2 with mean X (Group 1) and Y (Group 2). 
 
-The values of  variance S1^2 and S2^2 were calculated from respective mean values.
+The values of  variance S1^2^ and S2^2^ were calculated from respective mean values.
 
 F ratio test statistic can be obtained by computing the ratio of the two variances S1^2 and S2^2.
 
@@ -37,7 +37,9 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
     <mi>n</mi>
    </mrow>
    <mn>1</mn>
+   <mpadded lspace = "0.5em" width = "+0.8em">
    <mi>, </mi>
+   </mpadded>
    <mrow>
     <mi>Y</mi>
     <mo stretchy="false">=</mo>
@@ -52,7 +54,9 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
    <mspace linebreak='newline' />
    <mspace linebreak='newline' />
   <mspace linebreak='newline' />
+  <mpadded lspace = "0.3em" width = "+0.6em">
    <mtext> and calculate standard deviation</mtext> 
+   </mpadded>
    <mspace linebreak='newline' />
   <mi>S</mi>
    <mrow>
@@ -86,7 +90,9 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
     <mo stretchy="false">−</mo>
     <mn>1</mn>
    </mrow>
+   <mpadded lspace = "0.3em" width = "+0.6em">
    <mi>,</mi>
+   </mpadded>
    <mi>S</mi>
    <mrow>
     <msup>
@@ -133,8 +139,8 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
 </math>
 
 F-ratio is defined using following formula.
-<?xml version="1.0" encoding="UTF-8"?>
 
+<?xml version="1.0" encoding="UTF-8"?>
 <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
  <semantics>
   <mrow>
@@ -182,9 +188,9 @@ Data considered for the analysis is ToothGrowth data set. The tooth growth data 
 
 The file contains 60 observations of 3 variables. Data contains 3 columns 
 
-len : length of the Teeth
-supp : Different Drugs considered for Treatments
-Dose : Dosage of the Drug
+- len : length of the Teeth
+- supp : Different Drugs considered for Treatments
+- Dose : Dosage of the Drug
 
 var.test represents the R implementation of F-ratio test
 
@@ -205,7 +211,7 @@ head(ToothGrowth)
 <table>
 <caption>A data.frame: 6 × 3</caption>
 <thead>
-	<tr><th scope=col>len</th><th scope=col>supp</th><th scope=col>dose</th></tr>
+	<tr><th scope=col>"len"</th><th scope=col>"supp"</th><th scope=col>"dose"</th></tr>
 	<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
