--- a/_posts/2020-01-05-F-test.markdown.md
+++ b/_posts/2020-01-05-F-test.markdown.md
@@ -15,9 +15,9 @@ To investigate the significance of the difference between two variances consider
 
 The samples of size n1 from Group 1 with values X1,X2,....Xn1 and size n2 from Group 2 with values Y1,Y2,...Yn2 with mean X (Group 1) and Y (Group 2). 
 
-The values of  variance S1^2^ and S2^2^ were calculated from respective mean values.
+The values of  variance S1 <sup>2</sup> and S2 <sup>2</sup>       were calculated from respective mean values.
 
-F ratio test statistic can be obtained by computing the ratio of the two variances S1^2 and S2^2.
+F ratio test statistic can be obtained by computing the ratio of the two variances S1 <sup>2</sup> and S2 <sup>2</sup>.
 
 F ratio follows F-distribution. F-distribution is a skewed distribution of Probabilities.
 
@@ -55,7 +55,7 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
    <mspace linebreak='newline' />
   <mspace linebreak='newline' />
   <mpadded lspace = "0.3em" width = "+0.6em">
-   <mtext> and calculate standard deviation</mtext> 
+   <mo linebreak='newline' linebreakstyle='after'>and calculate Standard Deviation</mo>
    </mpadded>
    <mspace linebreak='newline' />
   <mi>S</mi>
@@ -211,7 +211,7 @@ head(ToothGrowth)
 <table>
 <caption>A data.frame: 6 × 3</caption>
 <thead>
-	<tr><th scope=col>"len"</th><th scope=col>"supp"</th><th scope=col>"dose"</th></tr>
+	<tr><th scope="col">len</th><th scope="col">supp</th><th scope="col">dose</th></tr>
 	<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
@@ -254,11 +254,11 @@ res.ftest
 
 
 
-    statistic: the value of the F test statistic.
-    parameter: the degrees of the freedom of the F distribution of the test statistic.
-    p.value: the p-value of the test.
-    conf.int: a confidence interval for the ratio of the population variances.
-    estimate: the ratio of the sample variances
+-     statistic: the value of the F test statistic.
+-     parameter: the degrees of the freedom of the F distribution of the test statistic.
+-     p.value: the p-value of the test.
+-     conf.int: a confidence interval for the ratio of the population variances.
+-     estimate: the ratio of the sample variances
 
 
 
